--- a/SimTECH/SimTECH/Pages/Season/SeasonEngineEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonEngineEditor.razor
@@ -15,9 +15,9 @@
                         }
                     </MudSelect>
                 }
-                <MudTextField @bind-Value="@Model.Name" Label="Name" Required />
-                <MudNumericField @bind-Value="@Model.Power" Label="Power" />
-                <MudNumericField @bind-Value="@Model.Reliability" Label="Reliability" />
+                <MudTextField @bind-Value="@Model.Name" Label="Name" Class="field-sm" Required />
+                <MudNumericField @bind-Value="@Model.Power" Label="Power" Class="field-sm" />
+                <MudNumericField @bind-Value="@Model.Reliability" Label="Reliability" Class="field-sm" />
             }
         </MudForm>
     </DialogContent>
