--- a/SimTECH/SimTECH/Pages/Season/SeasonTeamEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonTeamEditor.razor
@@ -17,15 +17,15 @@
                 </MudSelect>
             }
 
-            <MudTextField @bind-Value="@Model.Name" Label="Name" Required />
-            <MudTextField @bind-Value="@Model.Principal" Label="Principal" Required />
-            <MudColorPicker @bind-Text="@Model.Colour" Label="Colour" DisableAlpha="true" />
-            <MudColorPicker @bind-Text="@Model.Accent" Label="Accent" DisableAlpha="true" />
-            <MudNumericField @bind-Value="@Model.BaseValue" Label="BaseValue" />
-            <MudNumericField @bind-Value="@Model.Aero" Label="Aero" />
-            <MudNumericField @bind-Value="@Model.Chassis" Label="Chassis" />
-            <MudNumericField @bind-Value="@Model.Powertrain" Label="Powertrain" />
-            <MudNumericField @bind-Value="@Model.Reliability" Label="Reliability" />
+            <MudTextField @bind-Value="@Model.Name" Label="Name" Class="field-md" Required />
+            <MudTextField @bind-Value="@Model.Principal" Label="Team Principal" Class="field-md" Required />
+            <MudColorPicker @bind-Text="@Model.Colour" Label="Colour" Class="field-sm" DisableAlpha="true" />
+            <MudColorPicker @bind-Text="@Model.Accent" Label="Accent" Class="field-sm" DisableAlpha="true" />
+            <MudNumericField @bind-Value="@Model.BaseValue" Label="BaseValue" Class="field-sm" />
+            <MudNumericField @bind-Value="@Model.Aero" Label="Aero" Class="field-sm" />
+            <MudNumericField @bind-Value="@Model.Chassis" Label="Chassis" Class="field-sm" />
+            <MudNumericField @bind-Value="@Model.Powertrain" Label="Powertrain" Class="field-sm" />
+            <MudNumericField @bind-Value="@Model.Reliability" Label="Reliability" Class="field-sm" />
 
             @if (Manufacturers is not null)
             {
