--- a/SimTECH/SimTECH/Pages/Setup/TeamEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TeamEditor.razor
@@ -1,8 +1,6 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText>
-            Create new team
-        </MudText>
+        <MudText>Modify team</MudText>
     </TitleContent>
     <DialogContent>
         <MudForm Model="@model">
