--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -35,6 +35,18 @@ html, body {
     width: 7px !important;
 }
 
+.field-sm {
+    width: 50px;
+}
+
+.field-md {
+    width: 100px;
+}
+
+.field-lg {
+    width: 200px;
+}
+
 /* default blazor css elements */
 #blazor-error-ui {
     background: lightyellow;
