--- a/SimTECH/SimTECH/Pages/Factors/TyreEditor.razor
+++ b/SimTECH/SimTECH/Pages/Factors/TyreEditor.razor
@@ -6,12 +6,14 @@
     </TitleContent>
     <DialogContent>
         <MudForm Model="@model">
-            <MudTextField T="string" @bind-Value="model.Name" Label="Name" />
-            <MudColorPicker @bind-Text="model.Colour" Label="Colour" Placeholder="Select colour" DisableAlpha="true" />
-            <MudNumericField T="int" @bind-Value="model.Length" Label="Length" />
-            <MudNumericField T="int" @bind-Value="model.Pace" Label="Pace" />
-            <MudNumericField T="int" @bind-Value="model.WearMax" Label="WearMax" />
-            <MudNumericField T="int" @bind-Value="model.WearMin" Label="WearMin" />
+            <MudTextField T="string" @bind-Value="model.Name" Label="Name" Class="field-md" />
+            <MudColorPicker @bind-Text="model.Colour" Label="Colour" Placeholder="Select colour" DisableAlpha="true" Class="field-sm" />
+            <MudNumericField T="int" @bind-Value="model.Length" Label="Length" Class="field-sm" />
+            <MudNumericField T="int" @bind-Value="model.Pace" Label="Pace" Class="field-sm" />
+            <MudStack Row="true" Spacing="4">
+                <MudNumericField T="int" @bind-Value="model.WearMax" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.DoubleArrow" AdornmentColor="Color.Warning" Label="WearMax" Class="field-sm" />
+                <MudNumericField T="int" @bind-Value="model.WearMin" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.DoubleArrow" AdornmentColor="Color.Warning" Label="WearMin" Class="field-sm" />
+            </MudStack>
         </MudForm>
         <MudPaper Height="75px">
             <MudText Typo="Typo.h6">Preview</MudText>
